--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -230,7 +230,7 @@ a:hover {
 
 h1 a, h2 a, h3 a,
 h4 a, h5 a, h6 a {
-    color: #22313F;
+    color: #247555;
 }
 
 
@@ -306,7 +306,7 @@ code, tt {
     font-family: Inconsolata, Consolas, Monaco, 'Andale Mono', monospace, sans-serif;
     font-size: 0.85em;
     white-space: pre-wrap;
-    background: #22313F;
+    background: #247555;
     color: #f8f8f2;
     border-radius: 0.3em;
 }
@@ -321,7 +321,7 @@ pre {
     font-size: 0.9em;
     white-space: pre;
     overflow: auto;
-    background: #22313F;
+    background: #247555;
     color: #f8f8f2;
     border-radius: 0.3em;
 }
@@ -614,7 +614,7 @@ margin on the iframe, cause it breaks stuff. */
     width: 370px;
     height: 100%;
     z-index: 100;
-    background-color: #22313F;
+    background-color: #247555;
     text-shadow: 0px 1px 3px rgba(0, 0, 0, 0.3);
     overflow-y: auto;
 }
