Adding rstck specific colors

--- a/assets/css/prism.css
+++ b/assets/css/prism.css
@@ -36,7 +36,7 @@ pre[class*="language-"] {
 
 :not(pre) > code[class*="language-"],
 pre[class*="language-"] {
-	background: #247555;
+	background: #b3cc57;
 }
 
 /* Inline code */
