--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -230,7 +230,7 @@ a:hover {
 
 h1 a, h2 a, h3 a,
 h4 a, h5 a, h6 a {
-    color: #247555;
+    color: #b3cc57;
 }
 
 
@@ -306,7 +306,7 @@ code, tt {
     font-family: Inconsolata, Consolas, Monaco, 'Andale Mono', monospace, sans-serif;
     font-size: 0.85em;
     white-space: pre-wrap;
-    background: #247555;
+    background: #b3cc57;
     color: #f8f8f2;
     border-radius: 0.3em;
 }
@@ -321,7 +321,7 @@ pre {
     font-size: 0.9em;
     white-space: pre;
     overflow: auto;
-    background: #247555;
+    background: #b3cc57;
     color: #f8f8f2;
     border-radius: 0.3em;
 }
@@ -457,17 +457,6 @@ margin on the iframe, cause it breaks stuff. */
     width: auto;
     margin: 0 auto;
     line-height: 0;
-    border:3px solid #fff;
-    border-radius:50%;
-    border-radius:50%;
-    max-height:100px;
-    -webkit-transition:opacity .3s ease-in-out;
-    transition:opacity .3s ease-in-out;
-    -webkit-box-shadow:0 0 3px 3px rgba(0,0,0,.3),inset 0 0 40px 2px rgba(0,0,0,.3);
-    box-shadow:0 0 3px 3px rgba(0,0,0,.3),inset 0 0 40px 2px rgba(0,0,0,.3);
-    -webkit-backface-visibility:hidden;
-    -ms-backface-visibility:hidden;
-    backface-visibility:hidden
 }
 
 /* The details of your blog. Defined in ghost/settings/ */
@@ -614,7 +603,7 @@ margin on the iframe, cause it breaks stuff. */
     width: 370px;
     height: 100%;
     z-index: 100;
-    background-color: #247555;
+    background-color: #b3cc57;
     text-shadow: 0px 1px 3px rgba(0, 0, 0, 0.3);
     overflow-y: auto;
 }
