--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -512,7 +512,7 @@ margin on the iframe, cause it breaks stuff. */
 
 .post-title {
     margin:0;
-    color: #222;
+    color: #b3cc57;
 }
 
 .post-title a {
