--- a/default.hbs
+++ b/default.hbs
@@ -32,10 +32,8 @@
 <body class="{{body_class}}">
 
     <div id="sidebar" {{#if @blog.cover}}style="background-image: url({{@blog.cover}})"{{/if}}>
-        <div id="sidebar-header">
-          {{#if @blog.logo}}<a class="blog-logo" href="{{@blog.url}}"><img src="{{@blog.logo}}" alt="Blog Logo" /></a>{{/if}}
-        </div>
         <div id="sidebar-content" class="inner">
+            {{#if @blog.logo}}<a class="blog-logo" href="{{@blog.url}}"><img src="{{@blog.logo}}" alt="RisingStack logo" /></a>{{/if}}
             <h2 class="blog-title"><a href="{{@blog.url}}">{{@blog.title}}</a></h1>
             <h3 class="blog-description">{{@blog.description}}</h2>
 
