--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -225,12 +225,12 @@ a {
 }
 
 a:hover {
-    color: #57A3E8;
+    color: #A2B537;
 }
 
 h1 a, h2 a, h3 a,
 h4 a, h5 a, h6 a {
-    color: #b3cc57;
+    color: #123E2D;
 }
 
 
