--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -307,7 +307,7 @@ code, tt {
     font-size: 0.85em;
     white-space: pre-wrap;
     background: #d6d6d6;
-    color: #f8f8f2;
+    color: #1e1e1e;
     border-radius: 0.3em;
 }
 
