--- a/partials/sidebar-external.hbs
+++ b/partials/sidebar-external.hbs
@@ -1,4 +1,4 @@
-<li class="external-link"><a target="_blank" href="https://risingstack.com"><i class="fa fa-globe"></i> RisingStack Website</a></li>
+<li class="external-link"><a target="_blank" href="http://risingstack.com"><i class="fa fa-globe"></i> RisingStack Website</a></li>
 <li class="external-link"><a target="_blank" href="https://github.com/risingstack"><i class="fa fa-github"></i> GitHub</a></li>
 <li class="external-link"><a target="_blank" href="https://twitter.com/risingstack"><i class="fa fa-twitter"></i> Twitter</a></li>
 <li class="external-link"><a target="_blank" href="mailto:info@risingstack.com"><i class="fa fa-envelope"></i> Contact</a></li>
