Adding webmaster verification

--- a/default.hbs
+++ b/default.hbs
@@ -12,6 +12,7 @@
 
     <meta name="HandheldFriendly" content="True" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="google-site-verification" content="1VZwYFsfiVb7eRGn7Hx4CQN2PHLUmbYZnlJOXrBaCPA" />
 
     <link rel="shortcut icon" href="{{asset "/favicon.png"}}">
 
