--- a/assets/css/prism.css
+++ b/assets/css/prism.css
@@ -8,7 +8,6 @@
 code[class*="language-"],
 pre[class*="language-"] {
 	color: #1e1e1e;
-	text-shadow: 0 1px rgba(0,0,0,0.3);
 	font-family: Inconsolata, Consolas, Monaco, 'Andale Mono', monospace, sans-serif;
 	direction: ltr;
 	text-align: left;
@@ -36,7 +35,7 @@ pre[class*="language-"] {
 
 :not(pre) > code[class*="language-"],
 pre[class*="language-"] {
-	background: #d6d6d6;
+	background: #EBEBEB;
 }
 
 /* Inline code */
@@ -152,7 +151,6 @@ pre[data-line] {
 		vertical-align: .3em;
 		border-radius: 999px;
 		text-shadow: none;
-		box-shadow: 0 1px white;
 	}
 	
 	.line-highlight[data-end]:after {
