Make codeblocks background color the same

--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -420,7 +420,7 @@ code, tt {
     font-family: Inconsolata, Consolas, Monaco, 'Andale Mono', monospace, sans-serif;
     font-size: 0.85em;
     white-space: pre-wrap;
-    background: #d6d6d6;
+    background: #F0F0F0;
     color: #1e1e1e;
     border-radius: 0.3em;
 }
