--- a/assets/css/prism.css
+++ b/assets/css/prism.css
@@ -35,7 +35,7 @@ pre[class*="language-"] {
 
 :not(pre) > code[class*="language-"],
 pre[class*="language-"] {
-	background: #EBEBEB;
+	background: #F0F0F0;
 }
 
 /* Inline code */
