--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -435,7 +435,7 @@ pre {
     font-size: 0.9em;
     white-space: pre;
     overflow: auto;
-    background: #d6d6d6;
+    background: #F0F0F0;
     color: #f8f8f2;
     border-radius: 0.3em;
 }
