--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -415,6 +415,40 @@ mark {
     background-color: #ffc336;
 }
 
+code, tt {
+    padding: 1px 3px;
+    font-family: Inconsolata, Consolas, Monaco, 'Andale Mono', monospace, sans-serif;
+    font-size: 0.85em;
+    white-space: pre-wrap;
+    background: #F0F0F0;
+    color: #1e1e1e;
+    border-radius: 0.3em;
+}
+
+pre {
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+    margin: 1.6em 0;
+    width: 100%;
+    padding: 10px;
+    font-family: Inconsolata, Consolas, Monaco, 'Andale Mono', monospace, sans-serif;
+    font-size: 0.9em;
+    white-space: pre;
+    overflow: auto;
+    background: #F0F0F0;
+    /*color: #f8f8f2;*/
+    border-radius: 0.3em;
+}
+
+pre code, tt {
+    font-size: inherit;
+    white-space: -moz-pre-wrap;
+    white-space: pre-wrap;
+    background: transparent;
+    border: none;
+    padding: 0;
+}
+
 kbd {
     display: inline-block;
     margin-bottom: 0.4em;
