--- a/post.hbs
+++ b/post.hbs
@@ -96,3 +96,4 @@
     {{/post}}
 
 </article>
+<script src="//load.sumome.com/" data-sumo-site-id="11225de372207e2d048b5d58e8414d1bc0467decb15dd3ddb8ac98d1364d38f1" async="async"></script>
