--- a/default.hbs
+++ b/default.hbs
@@ -65,8 +65,10 @@
             </div>
 
             <footer class="site-footer">
-                <section class="copyright">{{> copyright}}</section>
+                <section class="copyright">{{> copyright}} | <a href="http://blog.risingstack.com/privacy-policy">Privacy Policy</a></section>
+
                 <section class="poweredby">Proudly published with <a class="icon-ghost" href="https://ghost.org">Ghost</a></section>
+
                 <section class="theme-credits"><a href="https://github.com/dlecina/StayPuft">StayPuft theme</a> by David Lecina</section>
             </footer>
         </div>
