--- a/page.hbs
+++ b/page.hbs
@@ -46,22 +46,8 @@
 
             {{/author}}
 
-            <section class="share">
-                <h4>Share this post</h4>
-                <div class="share-icons">
-                    <a class="fa fa-twitter-square" href="https://twitter.com/share?text={{encode title}}&amp;url={{url absolute="true"}}"
-                        onclick="window.open(this.href, 'twitter-share', 'width=550,height=235');return false;">
-                        <span class="hidden">Twitter</span>
-                    </a>
-                    <a class="fa fa-facebook-square" href="https://www.facebook.com/sharer/sharer.php?u={{url absolute="true"}}"
-                        onclick="window.open(this.href, 'facebook-share','width=580,height=296');return false;">
-                        <span class="hidden">Facebook</span>
-                    </a>
-                    <a class="fa fa-google-plus-square" href="https://plus.google.com/share?url={{url absolute="true"}}"
-                       onclick="window.open(this.href, 'google-plus-share', 'width=490,height=530');return false;">
-                        <span class="hidden">Google+</span>
-                    </a>
-                </div>
+            <section class="hire-the-author">
+                <a href="mailto:hello@risingstack.com?Subject=Saying%20Hi%20to%20RisingStack&Body=Hi%20there%2C%0A%0AI%20was%20just%20reading%20your%20blog%2C%20and%20I%20want%20to%20talk%20more%20on%20what%20kind%20of%20services%20you%20offer.%20%0A%0AI%27m%20looking%20for%20....%0AMy%20company%3A%0A%0ACheers%2C%0A">Hire the author</a>
             </section>
 
         </footer>
