--- a/post.hbs
+++ b/post.hbs
@@ -62,6 +62,16 @@
 
         </footer>
 
+        <div id="mc_embed_signup">
+            <form action="//risingstack.us9.list-manage.com/subscribe/post?u=510d6f81b948a39e0d9c32ec3&amp;id=02a6a69990" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+                <label for="mce-EMAIL">Get early access to our posts</label>
+                <input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="email address" required>
+                <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+                <div style="position: absolute; left: -5000px;"><input type="text" name="b_510d6f81b948a39e0d9c32ec3_02a6a69990" tabindex="-1" value=""></div>
+                <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
+            </form>
+        </div>
+
         <section class="post-comments">
             <div id="disqus_thread"></div>
             <script type="text/javascript">
