Redirect to risingstack.com instead of blog homepage

--- a/default.hbs
+++ b/default.hbs
@@ -41,7 +41,7 @@
     <div id="sidebar" {{#if @blog.cover}}style="background-image: url({{@blog.cover}})"{{/if}}>
         <div id="sidebar-content" class="inner">
 
-            {{#if @blog.logo}}<a class="blog-logo" href="{{@blog.url}}"><img src="{{@blog.logo}}" alt="RisingStack logo" /></a>{{/if}}
+            {{#if @blog.logo}}<a class="blog-logo" href="https://risingstack.com"><img src="{{@blog.logo}}" alt="RisingStack logo" /></a>{{/if}}
             <h2 class="blog-title"><a href="{{@blog.url}}">{{@blog.title}}</a></h2>
             <h3 class="blog-description">{{@blog.description}}</h3>
 
