--- a/page.hbs
+++ b/page.hbs
@@ -47,7 +47,7 @@
             {{/author}}
 
             <section class="hire-the-author">
-                <a href="mailto:hello@risingstack.com?Subject=Saying%20Hi%20to%20RisingStack&Body=Hi%20there%2C%0A%0AI%20was%20just%20reading%20your%20blog%2C%20and%20I%20want%20to%20talk%20more%20on%20what%20kind%20of%20services%20you%20offer.%20%0A%0AI%27m%20looking%20for%20....%0AMy%20company%3A%0A%0ACheers%2C%0A">Hire the author</a>
+                <a href="https://risingstack.com/?utm_source=rsblog&utm_medium=hiretheauthor&utm_campaign=consulting">Hire the author</a>
             </section>
 
         </footer>
