--- a/post.hbs
+++ b/post.hbs
@@ -57,7 +57,7 @@
             {{/author}}
 
             <section class="hire-the-author">
-                <a href="https://risingstack.com">Hire the author</a>
+                <a href="https://risingstack.com/?utm_source=rsblog&utm_medium=hiretheauthor&utm_campaign=consulting">Hire the author</a>
             </section>
 
         </footer>
