RisingStack.com links now point to the contact form

--- a/page.hbs
+++ b/page.hbs
@@ -47,7 +47,7 @@
             {{/author}}
 
             <section class="hire-the-author">
-                <a href="https://risingstack.com/?utm_source=rsblog&utm_medium=hiretheauthor&utm_campaign=consulting">Hire the author</a>
+                <a href="https://risingstack.com/?utm_source=rsblog&utm_medium=hiretheauthor&utm_campaign=consulting#contact">Hire the author</a>
             </section>
 
         </footer>
