--- a/partials/sidebar-external.hbs
+++ b/partials/sidebar-external.hbs
@@ -2,7 +2,7 @@
 <li class="external-link"><a target="_blank" href="http://trace.risingstack.com"><i class="fa fa-bullseye"></i> Topology view for microservices</a><a class="new"> New!</a></li>
 <li class="external-link"><a target="_blank" href="https://github.com/risingstack"><i class="fa fa-github"></i> GitHub</a></li>
 <li class="external-link"><a target="_blank" href="https://twitter.com/risingstack"><i class="fa fa-twitter"></i> Twitter</a></li>
-<li class="external-link"><a target="_blank" href="mailto:hello@risingstack.com"><i class="fa fa-envelope"></i> Contact</a></li>
+<li class="external-link"><a target="_blank" href="https://risingstack.com/?utm_source=rsblog&utm_medium=sidebar&utm_campaign=consulting#contact"><i class="fa fa-envelope"></i> Contact</a></li>
 
 <div id="mc_embed_signup">
     <form action="//risingstack.us9.list-manage.com/subscribe/post?u=510d6f81b948a39e0d9c32ec3&amp;id=02a6a69990" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
