Added robots.txt and .gitignore

--- a/partials/sidebar-external.hbs
+++ b/partials/sidebar-external.hbs
@@ -1,5 +1,5 @@
 <li class="external-link"><a target="_blank" href="https://risingstack.com"><i class="fa fa-globe"></i> RisingStack Website</a></li>
-<li class="external-link"><a target="_blank" href="http://trace.risingstack.com"><i class="fa fa-bullseye"></i> Topology view for microservices</a><a class="new"> New!</a></li>
+<li class="external-link"><a target="_blank" href="http://trace.risingstack.com/?utm_source=rsblog&utm_medium=sidebar&utm_campaign=tracebeta"><i class="fa fa-bullseye"></i> Topology view for microservices</a><a class="new"> New!</a></li>
 <li class="external-link"><a target="_blank" href="https://github.com/risingstack"><i class="fa fa-github"></i> GitHub</a></li>
 <li class="external-link"><a target="_blank" href="https://twitter.com/risingstack"><i class="fa fa-twitter"></i> Twitter</a></li>
 <li class="external-link"><a target="_blank" href="https://risingstack.com/?utm_source=rsblog&utm_medium=sidebar&utm_campaign=consulting#contact"><i class="fa fa-envelope"></i> Contact</a></li>
